Fix footer subscribe form gap on tablet

--- a/css/styles.css
+++ b/css/styles.css
@@ -821,6 +821,7 @@ a {
     .portfolio-item {
         width: calc((100% - 48px) / 3);
         transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        box-shadow: none;
     }
 
     .portfolio-item:hover,
@@ -1024,6 +1025,7 @@ a {
     .footer-form {
         flex-direction: row;
         justify-content: flex-start;
+        gap: 24px;
     }
 
     .footer-form-input {
@@ -1047,8 +1049,6 @@ a {
         margin-right: 120px;
     }
 
-
-
     .footer-social {
         width: auto;
         margin-right: 80px;
@@ -1063,7 +1063,6 @@ a {
     .footer-form {
         flex-direction: row;
         align-items: center;
-        gap: 24px;
     }
 
 
